--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,8 @@ kapt {
 }
 
 dependencies {
+    compile project(':domain')
+    compile project(':data')
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:27.0.2'
