--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,14 @@
 apply plugin: 'com.android.application'
-
 apply plugin: 'kotlin-android'
-
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 26
     defaultConfig {
         applicationId "com.example.knifestart.hotelsnights"
         minSdkVersion 21
-        targetSdkVersion 27
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -25,11 +24,9 @@ android {
             }
         }
     }
-
     dataBinding {
         enabled = true
     }
-
     defaultConfig {
         vectorDrawables.useSupportLibrary = true
     }
@@ -39,17 +36,18 @@ kapt {
     generateStubs = true
 }
 
+
 dependencies {
-    compile project(':domain')
-    compile project(':data')
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:27.0.2'
-    compile 'com.android.support:design:27.0.2'
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    compile 'com.android.support:design:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    compile project(':domain')
+    compile project(':data')
     compile group: 'io.reactivex.rxjava2', name: 'rxjava', version: '2.1.7'
     compile "com.google.dagger:dagger:2.11"
     compile "com.google.dagger:dagger-android:2.11"
@@ -59,7 +57,9 @@ dependencies {
     provided 'org.glassfish:javax.annotation:10.0-b28'
     compile 'ru.terrakok.cicerone:cicerone:2.1.0'
     kapt 'com.android.databinding:compiler:2.3.3'
+    compile 'com.android.support:recyclerview-v7:26.1.0'
     compile 'de.hdodenhof:circleimageview:2.2.0'
     compile 'com.github.bumptech.glide:glide:4.0.0-RC1'
     kapt 'com.github.bumptech.glide:compiler:4.0.0-RC1'
 }
+
