--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     compile "com.squareup.retrofit2:converter-gson:2.3.0"
     compile 'com.squareup.okhttp3:okhttp:3.9.1'
     compile group: 'com.squareup.okhttp3', name: 'logging-interceptor', version: '3.9.1'
+    testCompile "org.mockito:mockito-core:2.+"
 }
 repositories {
     mavenCentral()
